[gd_scene load_steps=2 format=3 uid="uid://dr1v6run3aqn0"]

[ext_resource type="Script" path="res://scenes/ui/debug.gd" id="1_u7nor"]

[node name="Debug" type="Control" node_paths=PackedStringArray("show_hide_disabled_text", "show_hide_enabled_text", "fps_disabled_label", "panel", "fps_label", "object_count_label", "node_count_label", "orphan_count_label", "resource_count_label", "process_time_label", "physics_process_time_label", "server_config_label", "peer_id_label", "player_id_label", "latest_packet_label", "debug_buttons_card_id", "send_packet_type", "send_packet_player", "send_packet_info")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_u7nor")
show_hide_disabled_text = NodePath("ShowHideDisabledText")
show_hide_enabled_text = NodePath("PanelContainer/ShowHideEnabledText")
fps_disabled_label = NodePath("FPSDisabled")
panel = NodePath("PanelContainer")
fps_label = NodePath("PanelContainer/TabContainer/Info/FPS")
object_count_label = NodePath("PanelContainer/TabContainer/Info/ObjectCount")
node_count_label = NodePath("PanelContainer/TabContainer/Info/NodeCount")
orphan_count_label = NodePath("PanelContainer/TabContainer/Info/OrphanCount")
resource_count_label = NodePath("PanelContainer/TabContainer/Info/ResourceCount")
process_time_label = NodePath("PanelContainer/TabContainer/Info/ProcessTime")
physics_process_time_label = NodePath("PanelContainer/TabContainer/Info/PhysicsProcessTime")
server_config_label = NodePath("PanelContainer/TabContainer/Info/ServerConfig")
peer_id_label = NodePath("PanelContainer/TabContainer/Info/PeerId")
player_id_label = NodePath("PanelContainer/TabContainer/Info/PlayerId")
latest_packet_label = NodePath("PanelContainer/TabContainer/Info/LatestPacket")
debug_buttons_card_id = NodePath("PanelContainer/TabContainer/Debug Buttons/FlowContainer/CardID")
send_packet_type = NodePath("PanelContainer/TabContainer/Send Packet/FlowContainer/Type")
send_packet_player = NodePath("PanelContainer/TabContainer/Send Packet/FlowContainer/Player")
send_packet_info = NodePath("PanelContainer/TabContainer/Send Packet/FlowContainer/Info")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 650.0
offset_bottom = 332.0

[node name="ShowHideEnabledText" type="RichTextLabel" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[right]Press [b]F1[/b] to show/hide."
fit_content = true

[node name="TabContainer" type="TabContainer" parent="PanelContainer"]
layout_mode = 2
drag_to_rearrange_enabled = true

[node name="Info" type="VBoxContainer" parent="PanelContainer/TabContainer"]
layout_mode = 2

[node name="FPS" type="RichTextLabel" parent="PanelContainer/TabContainer/Info"]
layout_mode = 2
mouse_filter = 2
text = "FPS: -1"
fit_content = true

[node name="ObjectCount" type="RichTextLabel" parent="PanelContainer/TabContainer/Info"]
layout_mode = 2
mouse_filter = 2
text = "Object Count: -1"
fit_content = true

[node name="NodeCount" type="RichTextLabel" parent="PanelContainer/TabContainer/Info"]
layout_mode = 2
mouse_filter = 2
text = "Node Count: -1"
fit_content = true

[node name="OrphanCount" type="RichTextLabel" parent="PanelContainer/TabContainer/Info"]
layout_mode = 2
mouse_filter = 2
text = "Orphan Count: -1"
fit_content = true

[node name="ResourceCount" type="RichTextLabel" parent="PanelContainer/TabContainer/Info"]
layout_mode = 2
mouse_filter = 2
text = "Resource Count: -1"
fit_content = true

[node name="ProcessTime" type="RichTextLabel" parent="PanelContainer/TabContainer/Info"]
layout_mode = 2
mouse_filter = 2
text = "Process Time: -1"
fit_content = true

[node name="PhysicsProcessTime" type="RichTextLabel" parent="PanelContainer/TabContainer/Info"]
layout_mode = 2
mouse_filter = 2
text = "Physics Process Time: -1"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/TabContainer/Info"]
layout_mode = 2
mouse_filter = 2

[node name="ServerConfig" type="RichTextLabel" parent="PanelContainer/TabContainer/Info"]
layout_mode = 2
mouse_filter = 2
text = "Server Config: null"
fit_content = true

[node name="PeerId" type="RichTextLabel" parent="PanelContainer/TabContainer/Info"]
layout_mode = 2
mouse_filter = 2
text = "Peer ID: -1"
fit_content = true

[node name="PlayerId" type="RichTextLabel" parent="PanelContainer/TabContainer/Info"]
layout_mode = 2
mouse_filter = 2
text = "Player ID: -1"
fit_content = true

[node name="LatestPacket" type="RichTextLabel" parent="PanelContainer/TabContainer/Info"]
layout_mode = 2
text = "Latest Packet: null"
fit_content = true

[node name="Debug Buttons" type="VBoxContainer" parent="PanelContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="FlowContainer" type="FlowContainer" parent="PanelContainer/TabContainer/Debug Buttons"]
layout_mode = 2

[node name="CardID" type="SpinBox" parent="PanelContainer/TabContainer/Debug Buttons/FlowContainer"]
layout_mode = 2
tooltip_text = "Card ID"
min_value = 1.0
value = 1.0
allow_greater = true
prefix = "ID"
select_all_on_focus = true

[node name="GivePlayer1Button" type="Button" parent="PanelContainer/TabContainer/Debug Buttons/FlowContainer"]
layout_mode = 2
text = "Give Card to Player 1"

[node name="GivePlayer2Button" type="Button" parent="PanelContainer/TabContainer/Debug Buttons/FlowContainer"]
layout_mode = 2
text = "Give Card to Player 2"

[node name="FlowContainer2" type="FlowContainer" parent="PanelContainer/TabContainer/Debug Buttons"]
layout_mode = 2
size_flags_vertical = 10

[node name="EndTurnButton" type="Button" parent="PanelContainer/TabContainer/Debug Buttons/FlowContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "End Turn"

[node name="10ManaButton" type="Button" parent="PanelContainer/TabContainer/Debug Buttons/FlowContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Set Mana to 10"

[node name="Send Packet" type="VBoxContainer" parent="PanelContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="FlowContainer" type="FlowContainer" parent="PanelContainer/TabContainer/Send Packet"]
layout_mode = 2

[node name="Type" type="OptionButton" parent="PanelContainer/TabContainer/Send Packet/FlowContainer"]
layout_mode = 2
tooltip_text = "Packet Type"
fit_to_longest_item = false

[node name="Player" type="SpinBox" parent="PanelContainer/TabContainer/Send Packet/FlowContainer"]
layout_mode = 2
tooltip_text = "Player ID

0: Player who starts first
1: Player who starts with The Coin"
max_value = 1.0
prefix = "P"
select_all_on_focus = true

[node name="Info" type="LineEdit" parent="PanelContainer/TabContainer/Send Packet/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Info"
text = "[]"
placeholder_text = "Info"
select_all_on_focus = true

[node name="Button" type="Button" parent="PanelContainer/TabContainer/Send Packet"]
layout_mode = 2
text = "Send Packet"

[node name="ShowHideDisabledText" type="RichTextLabel" parent="."]
visible = false
layout_mode = 2
offset_right = 568.0
offset_bottom = 23.0
mouse_filter = 2
bbcode_enabled = true
text = "Press [b]F1[/b] to show/hide debug menu."
fit_content = true

[node name="FPSDisabled" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_right = 576.0
offset_bottom = 23.0
mouse_filter = 2
text = "FPS: -1"
fit_content = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="PanelContainer/TabContainer/Debug Buttons/FlowContainer/GivePlayer1Button" to="." method="_on_give_player_1_button_pressed"]
[connection signal="pressed" from="PanelContainer/TabContainer/Debug Buttons/FlowContainer/GivePlayer2Button" to="." method="_on_give_player_2_button_pressed"]
[connection signal="pressed" from="PanelContainer/TabContainer/Debug Buttons/FlowContainer2/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
[connection signal="pressed" from="PanelContainer/TabContainer/Debug Buttons/FlowContainer2/10ManaButton" to="." method="_on_mana_button_pressed"]
[connection signal="text_submitted" from="PanelContainer/TabContainer/Send Packet/FlowContainer/Info" to="." method="_on_info_text_submitted"]
[connection signal="pressed" from="PanelContainer/TabContainer/Send Packet/Button" to="." method="_on_send_packet_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
